--- a/renovate.json
+++ b/renovate.json
@@ -5,5 +5,6 @@
     ":maintainLockFilesWeekly",
     ":automergeMinor",
     "config:recommended"
-  ]
+  ],
+  "ignorePresets": [":dependencyDashboard"]
 }
